# VerdictAI

./: .dockerignore  .env.example  .gitignore  AUTHORS.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  arena_routing.py  backend.py  benchmark.py  bm25_index.py  case-intelligence.html  case-simulator.html  case_report_pdf.py  case_simulator.py  evaluate.py  evaluation.py  hybrid_retriever.py  index.html  login.html  main.py  pyproject.toml  query_rewriter.py  rag_pipeline.py  requirements.txt  reranker.py  retrieval_config.py  translation.py
.github/: pull_request_template.md
auth/: __init__.py  deps.py  passwords.py  rbac.py  routes.py  store.py  tokens.py
case_intelligence/: __init__.py  case_analyzer.py  common.py  defense_agent.py  demo_cases.py  documents.py  evidence_agent.py  judge_agent.py  orchestrator.py  prosecutor_agent.py  research_agent.py  timeline_agent.py  verdict_agent.py
docs/: CHANGES.md  RETRIEVAL.md  SECURITY_ARCHITECTURE.md  VERIFICATION.md
security/: __init__.py  audit.py  budget.py  citation_verifier.py  files.py  headers.py  output_guard.py  pii.py  prompt_guard.py
static/: base.css  theme-config.js
tests/: conftest.py  test_arena_routing.py  test_auth.py  test_auth_integration.py  test_backend_health.py  test_bm25.py  test_budget.py  test_case_intelligence.py  test_case_report_pdf.py  test_case_simulator.py  test_hybrid_fusion.py  test_reranker.py  test_retrieval_config.py  test_security.py  test_translation.py  test_verification.py
verification/: __init__.py  citation_agent.py  (+6 more)
(+19 files in other folders)
